--- a/burevestnik/Info.plist
+++ b/burevestnik/Info.plist
@@ -25,26 +25,7 @@
 		<string>_burevestnik._tcp</string>
 	</array>
 	<key>NSLocalNetworkUsageDescription</key>
-	<string>Вперед, буревестник, Солнце взошло! Новых известий время пришло</string>
-	<key>UIApplicationSceneManifest</key>
-	<dict>
-		<key>UIApplicationSupportsMultipleScenes</key>
-		<false/>
-		<key>UISceneConfigurations</key>
-		<dict>
-			<key>UIWindowSceneSessionRoleApplication</key>
-			<array>
-				<dict>
-					<key>UISceneConfigurationName</key>
-					<string>Default Configuration</string>
-					<key>UISceneDelegateClassName</key>
-					<string>$(PRODUCT_MODULE_NAME).SceneDelegate</string>
-					<key>UISceneStoryboardFile</key>
-					<string>Main</string>
-				</dict>
-			</array>
-		</dict>
-	</dict>
+	<string>Вперед, буревестник! Солнце взошло! Новых известий время пришло</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
