--- a/burevestnik.xcodeproj/xcshareddata/xcschemes/burevestnik.xcscheme
+++ b/burevestnik.xcodeproj/xcshareddata/xcschemes/burevestnik.xcscheme
@@ -51,8 +51,8 @@
          </BuildableReference>
       </BuildableProductRunnable>
       <LocationScenarioReference
-         identifier = "Moscow, Russia"
-         referenceType = "1">
+         identifier = "../../burevestnik/Minsk.gpx"
+         referenceType = "0">
       </LocationScenarioReference>
    </LaunchAction>
    <ProfileAction
