--- a/burevestnik/Info.plist
+++ b/burevestnik/Info.plist
@@ -26,6 +26,8 @@
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
+		<key>NSTemporaryExceptionRequiresForwardSecrecy</key>
+		<false/>
 	</dict>
 	<key>NSBonjourServices</key>
 	<array>
@@ -33,9 +35,13 @@
 		<string>_burevestnik._udp</string>
 	</array>
 	<key>NSLocalNetworkUsageDescription</key>
-	<string>Самое главное: локальная сеть используется для общения без интернета.</string>
+	<string>Локальная сеть используется для общения без интернета</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Чтобы видеть собеседников на карте, а им — видеть вас.</string>
+	<string>Чтобы видеть собеседников на карте, а им — видеть вас</string>
+	<key>NSBluetoothPeripheralUsageDescription</key>
+	<string>Блютус используется для общения без интернета</string>
+	<key>NSBluetoothAlwaysUsageDescription</key>
+	<string>Блютус используется для общения без интернета</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
