--- a/burevestnik.xcodeproj/xcshareddata/xcschemes/burevestnik.xcscheme
+++ b/burevestnik.xcodeproj/xcshareddata/xcschemes/burevestnik.xcscheme
@@ -51,8 +51,8 @@
          </BuildableReference>
       </BuildableProductRunnable>
       <LocationScenarioReference
-         identifier = "../../burevestnik/Minsk.gpx"
-         referenceType = "0">
+         identifier = "com.apple.dt.IDEFoundation.CurrentLocationScenarioIdentifier"
+         referenceType = "1">
       </LocationScenarioReference>
    </LaunchAction>
    <ProfileAction
